--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <title>TailAdmin Dashboard</title>
+    <title>Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
 <body class="bg-gray-100">
@@ -10,7 +10,7 @@
     <!-- Sidebar (responsive) -->
     <aside id="sidebar" class="fixed inset-y-0 left-0 z-30 w-64 bg-white shadow-md flex flex-col transform -translate-x-full transition-transform duration-200 ease-in-out md:relative md:translate-x-0 md:flex md:w-64">
         <div class="h-16 flex items-center justify-center border-b">
-            <span class="font-bold text-xl text-blue-600">TailAdmin</span>
+            <span class="font-bold text-xl text-blue-600">Dashboard</span>
         </div>
         <nav class="flex-1 px-4 py-6">
             <ul class="space-y-2">
