added main content area elements

--- a/index.html
+++ b/index.html
@@ -46,6 +46,90 @@
         </header>
         <!-- Main panel -->
         <main class="flex-1 p-4 md:p-6">
+            <!-- Metric Cards Start -->
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+                <!-- Metric Card 1 -->
+                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between">
+                    <div>
+                        <div class="text-gray-500 text-sm mb-2">Metric Title 1</div>
+                        <div class="text-2xl font-bold text-gray-800">123</div>
+                    </div>
+                    <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
+                </div>
+                <!-- Metric Card 2 -->
+                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between">
+                    <div>
+                        <div class="text-gray-500 text-sm mb-2">Metric Title 2</div>
+                        <div class="text-2xl font-bold text-gray-800">456</div>
+                    </div>
+                    <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
+                </div>
+            </div>
+            <!-- Full Width Card -->
+            <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between mb-4">
+                <div>
+                    <div class="text-gray-500 text-sm mb-2">Full Width Metric</div>
+                    <div class="text-2xl font-bold text-gray-800">789</div>
+                </div>
+                <div class="mt-4 text-xs text-gray-400">This card expands full width below the two metrics above.</div>
+            </div>
+            <!-- Recent Orders Table -->
+            <div class="bg-white rounded-lg shadow mb-4 overflow-x-auto">
+                <div class="p-4 border-b">
+                    <h2 class="text-lg font-semibold text-gray-800">Recent Orders</h2>
+                </div>
+                <table class="min-w-full divide-y divide-gray-200 text-sm">
+                    <thead class="bg-gray-50">
+                        <tr>
+                            <th class="px-6 py-3 text-left font-medium text-gray-500">Order ID</th>
+                            <th class="px-6 py-3 text-left font-medium text-gray-500">Customer</th>
+                            <th class="px-6 py-3 text-left font-medium text-gray-500">Date</th>
+                            <th class="px-6 py-3 text-left font-medium text-gray-500">Amount</th>
+                            <th class="px-6 py-3 text-left font-medium text-gray-500">Status</th>
+                            <th class="px-6 py-3 text-right font-medium text-gray-500">Actions</th>
+                        </tr>
+                    </thead>
+                    <tbody class="divide-y divide-gray-100">
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-700">#1001</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-700">John Doe</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500">2024-06-01</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-700">$120.00</td>
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <span class="inline-block px-2 py-1 text-xs rounded bg-green-100 text-green-700">Completed</span>
+                            </td>
+                            <td class="px-6 py-4 whitespace-nowrap text-right">
+                                <button class="text-blue-600 hover:underline text-xs">View</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-700">#1002</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-700">Jane Smith</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500">2024-06-02</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-700">$80.00</td>
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <span class="inline-block px-2 py-1 text-xs rounded bg-yellow-100 text-yellow-700">Pending</span>
+                            </td>
+                            <td class="px-6 py-4 whitespace-nowrap text-right">
+                                <button class="text-blue-600 hover:underline text-xs">View</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td class="px-6 py-4 whitespace-nowrap font-medium text-gray-700">#1003</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-700">Alice Brown</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-500">2024-06-03</td>
+                            <td class="px-6 py-4 whitespace-nowrap text-gray-700">$150.00</td>
+                            <td class="px-6 py-4 whitespace-nowrap">
+                                <span class="inline-block px-2 py-1 text-xs rounded bg-red-100 text-red-700">Cancelled</span>
+                            </td>
+                            <td class="px-6 py-4 whitespace-nowrap text-right">
+                                <button class="text-blue-600 hover:underline text-xs">View</button>
+                            </td>
+                        </tr>
+                        <!-- Add more rows as needed -->
+                    </tbody>
+                </table>
+            </div>
             <div class="border-2 border-dashed border-gray-200 rounded-lg h-full bg-white flex items-center justify-center text-gray-400 min-h-[300px]">
                 Main Content Area
             </div>
