--- a/index.html
+++ b/index.html
@@ -14,13 +14,30 @@
         </div>
         <nav class="flex-1 px-4 py-6">
             <ul class="space-y-2">
+                <!-- Menu Item Dashboard Dropdown Start -->
                 <li>
-                    <a href="#" class="flex items-center px-3 py-2 rounded-md text-gray-700 hover:bg-blue-50 hover:text-blue-600 font-medium">
-                        <!-- Use a simple icon for demo -->
-                        <svg class="w-5 h-5 mr-3 text-gray-400" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 8h14v-2H7v2zm0-4h14v-2H7v2zm0-6v2h14V7H7z"></path></svg>
-                        Dashboard
-                    </a>
+                    <button id="dashboard-menu-btn" class="w-full flex items-center px-3 py-2 rounded-md text-gray-700 hover:bg-blue-50 hover:text-blue-600 font-medium transition-colors duration-150 group focus:outline-none">
+                        <span class="inline-flex items-center justify-center w-6 h-6 mr-3 text-blue-500 group-hover:text-blue-600">
+                            <!-- Dashboard icon SVG -->
+                            <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 8h14v-2H7v2zm0-4h14v-2H7v2zm0-6v2h14V7H7z"/>
+                            </svg>
+                        </span>
+                        <span class="truncate">Dashboard</span>
+                        <svg id="dashboard-menu-arrow" class="ml-auto w-4 h-4 text-gray-400 transition-transform duration-200" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
+                        </svg>
+                    </button>
+                    <ul id="dashboard-submenu" class="pl-10 mt-1 space-y-1 hidden">
+                        <li>
+                            <a href="#" class="block px-3 py-2 rounded-md text-gray-600 hover:bg-blue-50 hover:text-blue-600 text-sm">Overview</a>
+                        </li>
+                        <li>
+                            <a href="#" class="block px-3 py-2 rounded-md text-gray-600 hover:bg-blue-50 hover:text-blue-600 text-sm">Analytics</a>
+                        </li>
+                    </ul>
                 </li>
+                <!-- Menu Item Dashboard Dropdown End -->
                 <!-- Add more nav items as needed -->
             </ul>
         </nav>
@@ -162,6 +179,18 @@ window.addEventListener('resize', () => {
         sidebar.classList.add('-translate-x-full');
         overlay.classList.add('hidden');
     }
+});
+
+// Dropdown menu logic
+const dashboardMenuBtn = document.getElementById('dashboard-menu-btn');
+const dashboardSubmenu = document.getElementById('dashboard-submenu');
+const dashboardMenuArrow = document.getElementById('dashboard-menu-arrow');
+let dashboardMenuOpen = false;
+
+dashboardMenuBtn.addEventListener('click', () => {
+    dashboardMenuOpen = !dashboardMenuOpen;
+    dashboardSubmenu.classList.toggle('hidden', !dashboardMenuOpen);
+    dashboardMenuArrow.classList.toggle('rotate-180', dashboardMenuOpen);
 });
 </script>
 <script type="module" src="/src/main.js"></script>
