--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <!-- Main panel -->
         <main class="flex-1 p-4 md:p-6">
             <!-- Metric Cards Start -->
-            <div class="grid grid-cols-1 md:grid-cols-2 gap-4 mb-4">
+            <div class="grid grid-cols-1 md:grid-cols-2 md:grid-rows-2 gap-4 mb-4">
                 <!-- Metric Card 1 -->
                 <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between">
                     <div>
@@ -73,10 +73,18 @@
                     </div>
                     <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
                 </div>
-                <!-- Metric Card 2 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between">
+                <!-- Metric Card 2 (spans 2 rows) -->
+                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between md:row-span-2">
                     <div>
                         <div class="text-gray-500 text-sm mb-2">Metric Title 2</div>
+                        <div class="text-2xl font-bold text-gray-800">456</div>
+                    </div>
+                    <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
+                </div>
+                <!-- Metric Card 3 -->
+                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between">
+                    <div>
+                        <div class="text-gray-500 text-sm mb-2">Metric Title 3</div>
                         <div class="text-2xl font-bold text-gray-800">456</div>
                     </div>
                     <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
