--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <title>Dashboard</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 </head>
-<body class="bg-gray-100">
+<body class="bg-gray-100 dark:bg-gray-900">
 <div class="min-h-screen flex">
     <!-- Sidebar (responsive) -->
-    <aside id="sidebar" class="fixed inset-y-0 left-0 z-30 w-64 bg-white shadow-md flex flex-col transform -translate-x-full transition-transform duration-200 ease-in-out md:relative md:translate-x-0 md:flex md:w-64">
-        <div class="h-16 flex items-center justify-center border-b">
-            <span class="font-bold text-xl text-blue-600">Dashboard</span>
+    <aside id="sidebar" class="fixed inset-y-0 left-0 z-30 w-64 bg-white dark:bg-gray-800 shadow-md flex flex-col transform -translate-x-full transition-transform duration-200 ease-in-out md:relative md:translate-x-0 md:flex md:w-64">
+        <div class="h-16 flex items-center justify-center border-b dark:border-gray-700">
+            <span class="font-bold text-xl text-blue-600 dark:text-blue-400">Dashboard</span>
         </div>
         <nav class="flex-1 px-4 py-6">
             <ul class="space-y-2">
@@ -47,18 +47,24 @@
     <!-- Main content area -->
     <div class="flex-1 flex flex-col min-w-0">
         <!-- Top bar -->
-        <header class="h-16 bg-white shadow flex items-center px-4 md:px-6">
+        <header class="h-16 bg-white dark:bg-gray-800 shadow flex items-center px-4 md:px-6">
             <!-- Sidebar toggle button (mobile) -->
             <button id="sidebar-toggle" class="md:hidden mr-4 focus:outline-none">
-                <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                <svg class="w-6 h-6 text-gray-700 dark:text-gray-200" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                     <path stroke-linecap="round" stroke-linejoin="round" d="M4 6h16M4 12h16M4 18h16"/>
                 </svg>
             </button>
             <div class="flex-1">
-                <span class="text-lg font-semibold text-gray-800">Dashboard</span>
+                <!-- Dark Mode Switch -->
+                <div class="mb-1 mt-1 flex items-center">
+                    <label for="dark-mode-toggle" class="mr-3 text-gray-700 dark:text-gray-200 font-medium">Dark Mode</label>
+                    <button id="dark-mode-toggle" class="relative inline-flex h-6 w-11 items-center rounded-full bg-gray-300 dark:bg-gray-600 focus:outline-none transition-colors">
+                        <span id="dark-mode-knob" class="inline-block h-5 w-5 transform bg-white dark:bg-gray-900 rounded-full transition-transform"></span>
+                    </button>
+                </div>
             </div>
             <div>
-                <span class="inline-block w-8 h-8 bg-gray-200 rounded-full"></span>
+                <span class="inline-block w-8 h-8 bg-gray-200 dark:bg-gray-700 rounded-full"></span>
             </div>
         </header>
         <!-- Main panel -->
@@ -66,45 +72,45 @@
             <!-- Metric Cards Start -->
             <div class="grid grid-cols-1 md:grid-cols-2 md:grid-rows-2 gap-4 mb-4">
                 <!-- Metric Card 1 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between">
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between">
                     <div>
                         <div class="text-gray-500 text-sm mb-2">Metric Title 1</div>
-                        <div class="text-2xl font-bold text-gray-800">123</div>
+                        <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">123</div>
                     </div>
                     <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
                 </div>
                 <!-- Metric Card 2 (spans 2 rows) -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between md:row-span-2">
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between md:row-span-2">
                     <div>
                         <div class="text-gray-500 text-sm mb-2">Metric Title 2</div>
-                        <div class="text-2xl font-bold text-gray-800">456</div>
+                        <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">456</div>
                     </div>
                     <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
                 </div>
                 <!-- Metric Card 3 -->
-                <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between">
+                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between">
                     <div>
                         <div class="text-gray-500 text-sm mb-2">Metric Title 3</div>
-                        <div class="text-2xl font-bold text-gray-800">456</div>
+                        <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">456</div>
                     </div>
                     <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
                 </div>
             </div>
             <!-- Full Width Card -->
-            <div class="bg-white rounded-lg shadow p-6 flex flex-col justify-between mb-4">
+            <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between mb-4">
                 <div>
                     <div class="text-gray-500 text-sm mb-2">Full Width Metric</div>
-                    <div class="text-2xl font-bold text-gray-800">789</div>
+                    <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">789</div>
                 </div>
                 <div class="mt-4 text-xs text-gray-400">This card expands full width below the two metrics above.</div>
             </div>
             <!-- Recent Orders Table -->
-            <div class="bg-white rounded-lg shadow mb-4 overflow-x-auto">
+            <div class="bg-white dark:bg-gray-800 rounded-lg shadow mb-4 overflow-x-auto">
                 <div class="p-4 border-b">
-                    <h2 class="text-lg font-semibold text-gray-800">Recent Orders</h2>
+                    <h2 class="text-lg font-semibold text-gray-800 dark:text-gray-200">Recent Orders</h2>
                 </div>
                 <table class="min-w-full divide-y divide-gray-200 text-sm">
-                    <thead class="bg-gray-50">
+                    <thead class="bg-gray-50 dark:bg-gray-700">
                         <tr>
                             <th class="px-6 py-3 text-left font-medium text-gray-500">Order ID</th>
                             <th class="px-6 py-3 text-left font-medium text-gray-500">Customer</th>
@@ -155,7 +161,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="border-2 border-dashed border-gray-200 rounded-lg h-full bg-white flex items-center justify-center text-gray-400 min-h-[300px]">
+            <div class="border-2 border-dashed border-gray-200 dark:border-gray-700 rounded-lg h-full bg-white dark:bg-gray-800 flex items-center justify-center text-gray-400 dark:text-gray-500 min-h-[300px]">
                 Main Content Area
             </div>
         </main>
@@ -200,6 +206,31 @@ dashboardMenuBtn.addEventListener('click', () => {
     dashboardSubmenu.classList.toggle('hidden', !dashboardMenuOpen);
     dashboardMenuArrow.classList.toggle('rotate-180', dashboardMenuOpen);
 });
+
+// Dark mode toggle logic
+const darkModeToggle = document.getElementById('dark-mode-toggle');
+const darkModeKnob = document.getElementById('dark-mode-knob');
+const htmlEl = document.documentElement;
+
+function setDarkMode(enabled) {
+    if (enabled) {
+        htmlEl.classList.add('dark');
+        darkModeKnob.classList.add('translate-x-5');
+    } else {
+        htmlEl.classList.remove('dark');
+        darkModeKnob.classList.remove('translate-x-5');
+    }
+}
+
+darkModeToggle.addEventListener('click', () => {
+    const isDark = htmlEl.classList.contains('dark');
+    setDarkMode(!isDark);
+});
+
+// Initialize knob position on load
+if (document.documentElement.classList.contains('dark')) {
+    darkModeKnob.classList.add('translate-x-5');
+}
 </script>
 <script type="module" src="/src/main.js"></script>
 </body>
