added search input

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Sidebar (responsive) -->
     <aside id="sidebar" class="fixed inset-y-0 left-0 z-30 w-64 bg-white dark:bg-gray-800 shadow-md flex flex-col transform -translate-x-full transition-transform duration-200 ease-in-out md:relative md:translate-x-0 md:flex md:w-64">
         <div class="h-16 flex items-center justify-center border-b dark:border-gray-700">
-            <span class="font-bold text-xl text-blue-600 dark:text-blue-400">Dashboard</span>
+            <span class="font-bold text-xl text-blue-600 dark:text-blue-400">Admin</span>
         </div>
         <nav class="flex-1 px-4 py-6">
             <ul class="space-y-2">
@@ -23,7 +23,7 @@
                                 <path stroke-linecap="round" stroke-linejoin="round" d="M3 13h2v-2H3v2zm0 4h2v-2H3v2zm0-8h2V7H3v2zm4 8h14v-2H7v2zm0-4h14v-2H7v2zm0-6v2h14V7H7z"/>
                             </svg>
                         </span>
-                        <span class="truncate">Dashboard</span>
+                        <span class="truncate">Menu</span>
                         <svg id="dashboard-menu-arrow" class="ml-auto w-4 h-4 text-gray-400 transition-transform duration-200" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7"/>
                         </svg>
@@ -55,7 +55,22 @@
                 </svg>
             </button>
             <div class="flex-1">
-                <span class="text-lg font-semibold text-gray-800 dark:text-gray-200">Dashboard</span>
+                <!-- Search box start -->
+                <div class="relative w-full max-w-xs">
+                    <input
+                        id="search-input"
+                        type="text"
+                        placeholder="Search..."
+                        class="block w-full pl-10 pr-4 py-2 rounded-lg border border-gray-200 dark:border-gray-700 bg-gray-50 dark:bg-gray-700 text-gray-700 dark:text-gray-200 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition"
+                    />
+                    <span class="absolute left-3 top-1/2 -translate-y-1/2 text-gray-400 dark:text-gray-300">
+                        <svg class="w-5 h-5" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24">
+                            <circle cx="11" cy="11" r="8" stroke="currentColor" stroke-width="2"></circle>
+                            <path stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" d="M21 21l-2-2"></path>
+                        </svg>
+                    </span>
+                </div>
+                <!-- Search box end -->
             </div>
             <div>
                 <span class="inline-block w-8 h-8 bg-gray-200 dark:bg-gray-700 rounded-full"></span>
@@ -162,7 +177,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="border-2 border-dashed border-gray-200 dark:border-gray-700 rounded-lg h-full bg-white dark:bg-gray-800 flex items-center justify-center text-gray-400 dark:text-gray-500 min-h-[300px]">
+            <div class="border-2 border-dashed border-gray-200 dark:border-gray-700 rounded-lg bg-white dark:bg-gray-800 flex items-center justify-center text-gray-400 dark:text-gray-500 min-h-[300px]">
                 Main Content Area
             </div>
         </main>
