--- a/login.html
+++ b/login.html
@@ -8,35 +8,37 @@
 <body class="bg-gray-100 dark:bg-gray-900">
 <div class="min-h-screen flex">
     <div id="sidebar-overlay" class="fixed inset-0 bg-black bg-opacity-30 z-20 hidden md:hidden"></div>
+
     <!-- Main content area -->
     <div class="flex-1 flex flex-col min-w-0">
         <!-- Top bar -->
         <header class="h-16 bg-white dark:bg-gray-800 shadow flex items-center px-4 md:px-6">
         </header>
+
         <!-- Main panel -->
-        <main class="flex-1 p-4 md:p-6">
-            <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between mb-4">
-                <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">Login</div>
-                <div class="mt-4 text text-gray-400">
-                    <form id="login-form">
-                        <div class="flex flex-col gap-y-8">
-                            <input type="text" id="username" name="username" required
-                                   placeholder="Username"
-                                   class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
-                            <input type="password" id="password" name="password" required
-                                   placeholder="Password"
-                                   class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
-                            <button type="submit"
-                                    class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md focus:outline-none focus:ring focus:ring-blue-500">Login</button>
-                        </div>
-                    </form>
-                </div>
+        <main class="flex-1 p-4 md:p-6 flex items-center justify-center">
+            <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 w-full max-w-sm">
+                <h1 class="text-2xl font-bold text-gray-800 dark:text-gray-200 mb-6">Login</h1>
+
+                <form id="login-form" class="flex flex-col gap-4">
+                    <input type="text" id="username" name="username" required
+                           placeholder="Username"
+                           class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
+
+                    <input type="password" id="password" name="password" required
+                           placeholder="Password"
+                           class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
+
+                    <button type="submit"
+                            class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
+                        Login
+                    </button>
+                </form>
             </div>
         </main>
     </div>
 </div>
-<script type="module">
-</script>
+
 <script type="module" src="/src/main.js"></script>
 </body>
 </html>
