--- a/login.html
+++ b/login.html
@@ -29,9 +29,13 @@
                            placeholder="Password"
                            class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
 
-                    <button type="submit"
-                            class="w-full bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500">
-                        Login
+                    <button
+                            type="submit"
+                            class="w-full bg-blue-600 hover:bg-blue-700
+                             text-white font-semibold py-2 px-4 rounded-lg shadow-md
+                             focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2
+                             transition-all duration-200 ease-in-out">
+                                            Login
                     </button>
                 </form>
             </div>
