--- a/login.html
+++ b/login.html
@@ -29,9 +29,7 @@
                            placeholder="Password"
                            class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
 
-                    <button
-                            class="w-full rounded-full bg-blue-500 px-5 py-2.5 text-sm font-semibold text-white shadow-md hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400 focus:ring-offset-2 transition-all duration-200 ease-in-out"
-                    >
+                    <button class="blue-button">
                         Login
                     </button>
                 </form>
