move more classes to components

--- a/login.html
+++ b/login.html
@@ -23,11 +23,11 @@
                 <form id="login-form" class="flex flex-col gap-4">
                     <input type="text" id="username" name="username" required
                            placeholder="Username"
-                           class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
+                           class="form-input">
 
                     <input type="password" id="password" name="password" required
                            placeholder="Password"
-                           class="block w-full px-3 py-2 border border-gray-300 dark:border-gray-600 rounded-md shadow-sm focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:text-gray-200">
+                           class="form-input">
 
                     <button class="blue-button">
                         Login
