fixed product cards

--- a/product.html
+++ b/product.html
@@ -88,10 +88,10 @@
             <!-- Products Grid -->
             <div class="max-w-7xl mx-auto">
                 <h1 class="text-2xl font-semibold text-gray-900 dark:text-gray-100 mb-6">Products</h1>
-                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
                     <!-- Product Card 1 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 1</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -99,7 +99,7 @@
                     </div>
                     <!-- Product Card 2 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 2</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -107,7 +107,7 @@
                     </div>
                     <!-- Product Card 3 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 3</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -115,7 +115,7 @@
                     </div>
                     <!-- Product Card 4 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 4</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -123,7 +123,7 @@
                     </div>
                     <!-- Product Card 5 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 5</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -131,7 +131,7 @@
                     </div>
                     <!-- Product Card 6 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 6</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -139,7 +139,7 @@
                     </div>
                     <!-- Product Card 7 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 7</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -147,7 +147,7 @@
                     </div>
                     <!-- Product Card 8 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 8</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
@@ -155,7 +155,7 @@
                     </div>
                     <!-- Product Card 9 -->
                     <div class="bg-white dark:bg-gray-800 rounded-lg shadow hover:shadow-md transition-shadow overflow-hidden">
-                        <div class="h-48 w-full bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
+                        <div class="w-full aspect-square bg-gray-200 dark:bg-gray-700 flex items-center justify-center text-gray-400 dark:text-gray-500 text-xs font-medium tracking-wide uppercase">Image</div>
                         <div class="p-4">
                             <h2 class="text-sm font-semibold text-gray-800 dark:text-gray-100">Product 9</h2>
                             <p class="mt-1 text-xs text-gray-500 dark:text-gray-400">Short descriptive text about the product.</p>
