--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <!-- Metric Cards Start -->
             <div class="grid grid-cols-1 md:grid-cols-2 md:grid-rows-2 gap-4 mb-4">
                 <!-- Metric Card 1 -->
-                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between">
+                <div class="card p-6 flex flex-col justify-between">
                     <div>
                         <div class="text-gray-500 text-sm mb-2">Metric Title 1</div>
                         <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">123</div>
@@ -96,7 +96,7 @@
                     <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
                 </div>
                 <!-- Metric Card 2 (spans 2 rows) -->
-                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between md:row-span-2">
+                <div class="card p-6 flex flex-col justify-between md:row-span-2">
                     <div>
                         <div class="text-gray-500 text-sm mb-2">Metric Title 2</div>
                         <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">456</div>
@@ -104,7 +104,7 @@
                     <div class="mt-4 text-xs text-gray-400">Placeholder for more info</div>
                 </div>
                 <!-- Metric Card 3 -->
-                <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between">
+                <div class="card p-6 flex flex-col justify-between">
                     <div>
                         <div class="text-gray-500 text-sm mb-2">Metric Title 3</div>
                         <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">456</div>
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <!-- Full Width Card -->
-            <div class="bg-white dark:bg-gray-800 rounded-lg shadow p-6 flex flex-col justify-between mb-4">
+            <div class="card p-6 flex flex-col justify-between mb-4">
                 <div>
                     <div class="text-gray-500 text-sm mb-2">Full Width Metric</div>
                     <div class="text-2xl font-bold text-gray-800 dark:text-gray-200">789</div>
@@ -121,7 +121,7 @@
                 <div class="mt-4 text-xs text-gray-400">This card expands full width below the two metrics above.</div>
             </div>
             <!-- Recent Orders Table -->
-            <div class="bg-white dark:bg-gray-800 rounded-lg shadow mb-4 overflow-x-auto">
+            <div class="card mb-4 overflow-x-auto">
                 <div class="p-4 border-b">
                     <h2 class="text-lg font-semibold text-gray-800 dark:text-gray-200">Recent Orders</h2>
                 </div>
