moved more inline classes to component class

--- a/index.html
+++ b/index.html
@@ -177,7 +177,8 @@
                     </tbody>
                 </table>
             </div>
-            <div class="border-2 border-dashed border-gray-200 dark:border-gray-700 rounded-lg bg-white dark:bg-gray-800 flex items-center justify-center text-gray-400 dark:text-gray-500 min-h-[300px]">
+            <!-- Main Content Placeholder -->
+            <div class="content-area">
                 Main Content Area
             </div>
         </main>
